[tool.poetry]
name = "pyspdx"
version = "0.1.0"
description = "Validate SPDX expressions"
authors = ["Tribe29 GmbH <info@tribe29.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0"
pyparsing = "^3.0.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
isort = "^5.10.1"
pylint = "^2.15.2"

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "line-too-long",
]
